--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "google-auth-library": "^6.1.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "react-toastify": "^6.1.0",
