--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "braintree-react": "^3.3.0",
+    "braintree-web": "^3.69.0",
+    "braintree-web-drop-in-react": "^1.2.1",
+    "braintree-web-react": "^0.7.0",
     "google-auth-library": "^6.1.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
